3-secrets/deployment.yml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "app-3"
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: app-3
  template:
    metadata:
      labels:
        instance: app-3
    spec:
      containers:
        - name: app-3
          image: oreasek/app-3
          ports:
            - containerPort: 8080 # note that this one matchs with port bellow
